--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-select-input-ios": "^2.0.5",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12"
   },
