--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12"
   },
